# Fyin

./: .gitignore  Cargo.toml  Dockerfile  README.md  sample.env
.github/workflows/: release.yml
src/: args.rs  bing.rs  data.rs  db.rs  embedding.rs  llm.rs  main.rs  open_ai.rs  pretty_print.rs  scraper.rs  vector.rs
