[package]
name = "fyin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openai-api-rs = "4.0.8"
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json"]}
serde_json = "1.0.96"
serde = { version = "1.0.164", features = ["serde_derive"] }
anyhow = "1.0.71"
rayon = "1.10"
futures = "0.3.28"
scraper = "0.19.0"
axum-streams = { version = "0.12.0", features = ["text"] }
openai = "1.0.0-alpha.10"
shuttle-secrets = "0.42.0"
tokio-stream = "0.1.14"
tower-http = { version = "0.5.0", features = ["fs"] }
axum = "0.7.4"
shuttle-axum = "0.44.0"
shuttle-runtime = "0.44.0"
sha2 = "0.10.8"
uuid = "1.8.0"
hora = "0.1.1"
clap = { version = "4.5.4", features = ["derive"] }
dotenv = "0.15.0"
log = "0.4.21"
pretty_env_logger = "0.5.0"
langchain-rust = { version = "4.1.2", features = ["sqlite"] }
futures-util = "0.3.30"
regex = "1.10.4"
ollama-rs = { version = "0.1.9", features = ["stream"] }
async-stream = "0.3.5"
owo-colors = "4.0.0"
lazy_static = "1.4.0"


